--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.sayHello"
+        "onCommand:extension.sayHello",
+        "onView:nodeDependencies"
     ],
     "main": "./out/extension",
     "contributes": {
@@ -20,7 +21,15 @@
                 "command": "extension.sayHello",
                 "title": "Hello World"
             }
-        ]
+        ],
+        "views": {
+            "explorer": [
+                {
+                    "id": "note",
+                    "name": "note"
+                }
+            ]
+        }
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
