--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,9 @@
         "module": "commonjs",
         "target": "es6",
         "outDir": "out",
-        "lib": [
-            "es6"
-        ],
         "sourceMap": true,
-        "rootDir": "src"
+        "rootDir": "src",
+        "jsx": "react"
     },
     "exclude": [
         "node_modules",
