--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-note",
   "displayName": "vscode-note",
   "description": "",
-  "version": "0.0.1",
+  "version": "v1.3.2",
   "publisher": "vscode-note",
   "engines": {
     "vscode": "^1.17.0"
@@ -46,9 +46,10 @@
   },
   "devDependencies": {
     "@types/mocha": "^2.2.44",
-    "@types/node": "^8.0.47",
-    "awesome-typescript-loader": "^3.2.3",
-    "typescript": "^2.5.3",
-    "vscode": "^1.1.6"
-  }
+    "@types/node": "^8.0.53",
+    "awesome-typescript-loader": "^3.4.0",
+    "typescript": "^2.6.2",
+    "vscode": "^1.1.8"
+  },
+  "dependencies": {}
 }
