--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
         "target": "es6",
         "outDir": "out",
         "sourceMap": true,
-        "rootDir": "src",
-        "jsx": "react"
+        "rootDir": "src"
     },
     "exclude": [
         "node_modules",
