--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-note",
   "displayName": "vscode-note",
   "description": "save note by json file",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "publisher": "shinhwagk",
   "engines": {
     "vscode": "^1.17.0"
@@ -53,7 +53,7 @@
     },
     "commands": [
       {
-        "command": "extension.showVscodeNotePreview",
+        "command": "extension.showVsNotePreview",
         "title": "Show Vscode Note"
       },
       {
