--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-note",
   "displayName": "vscode-note",
   "description": "save note by json file",
-  "version": "0.0.4",
+  "version": "0.0.1",
   "publisher": "shinhwagk",
   "engines": {
     "vscode": "^1.17.0"
@@ -15,45 +15,26 @@
     "url": "https://github.com/shinhwagk/vscode-note"
   },
   "activationEvents": [
-    "onCommand:extension.showVscodeNotePreview",
-    "onCommand:extension.add.note",
-    "onCommand:extension.modifyNote",
-    "onCommand:extension.deleteNote",
-    "onCommand:extension.addCategory",
-    "onCommand:extension.modifyCategory",
-    "onCommand:extension.deleteCategory",
-    "onView:vsnote",
-    "onCommand:extension.sayHello"
+    "workspaceContains:.index.json"
   ],
   "main": "./out/extension",
   "contributes": {
-    "configuration": {
-      "type": "object",
-      "title": "vsnote",
-      "properties": {
-        "vsnote.rootPath": {
-          "type": "string",
-          "default": null,
-          "description": "......"
-        }
-      }
-    },
     "menus": {
       "view/title": [
         {
-          "command": "extension.addLabel",
+          "command": "extension.insert.label",
           "when": "view == vsnote",
           "group": "vsnote"
         }
       ],
       "view/item/context": [
         {
-          "command": "extension.addCategory",
+          "command": "extension.insert.category",
           "when": "view == vsnote",
           "group": "vsnote"
         },
         {
-          "command": "extension.addLabel",
+          "command": "extension.insert.label",
           "when": "view == vsnote",
           "group": "vsnote"
         }
@@ -61,24 +42,44 @@
     },
     "commands": [
       {
-        "command": "extension.openfolder",
-        "title": "test open folder"
-      },
-      {
         "command": "extension.showVsNotePreview",
         "title": "Show Vscode Note"
       },
       {
-        "command": "extension.add.note",
-        "title": "add vsnote"
+        "command": "extension.insert.note",
+        "title": "vsnote: insert vsnote"
       },
       {
-        "command": "extension.addCategory",
-        "title": "vsnote: add category"
+        "command": "extension.insert.category",
+        "title": "vsnote: insert category"
       },
       {
-        "command": "extension.addLabel",
-        "title": "vsnote: add label"
+        "command": "extension.insert.label",
+        "title": "vsnote: insert label"
+      },
+      {
+        "command": "extension.update.note",
+        "title": "vsnote: update note"
+      },
+      {
+        "command": "extension.update.category",
+        "title": "vsnote: update category"
+      },
+      {
+        "command": "extension.update.label",
+        "title": "vsnote: update label"
+      },
+      {
+        "command": "extension.delete.note",
+        "title": "vsnote: delete note"
+      },
+      {
+        "command": "extension.delete.category",
+        "title": "vsnote: delete category"
+      },
+      {
+        "command": "extension.delete.label",
+        "title": "vsnote: delete label"
       }
     ],
     "views": {
@@ -98,11 +99,11 @@
     "test": "npm run compile && node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "@types/mocha": "^2.2.46",
-    "@types/node": "^9.3.0",
-    "awesome-typescript-loader": "^3.4.1",
-    "typescript": "^2.6.2",
-    "vscode": "^1.1.10"
+    "@types/mocha": "^5.0.0",
+    "@types/node": "^9.6.2",
+    "awesome-typescript-loader": "^5.0.0",
+    "typescript": "^2.8.1",
+    "vscode": "^1.1.14"
   },
   "dependencies": {}
 }
