--- a/package.json
+++ b/package.json
@@ -101,9 +101,9 @@
   "devDependencies": {
     "@types/mocha": "^5.0.0",
     "@types/node": "^9.6.2",
-    "awesome-typescript-loader": "^5.0.0",
     "typescript": "^2.8.1",
-    "vscode": "^1.1.14"
+    "vscode": "^1.1.14",
+    "tslint": "^5.9.1"
   },
   "dependencies": {}
 }
