--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-note",
   "displayName": "vscode-note",
   "description": "save note by json file",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "publisher": "shinhwagk",
   "engines": {
     "vscode": "^1.17.0"
@@ -15,7 +15,7 @@
     "url": "https://github.com/shinhwagk/vscode-note"
   },
   "activationEvents": [
-    "workspaceContains:.index.json"
+    "workspaceContains:vsnote.json"
   ],
   "main": "./out/extension",
   "contributes": {
